--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Choo Choose Me!</title>
 </head>
 <body>
+
+    <!-- bootstrap link here -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- css link here -->
+    <link rel="stylesheet" type="text/css" href="assets/style.css/">
+    <!-- jquery link here -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <!-- firebase link -->
+
+    <!-- moments.js link -->
+
+
     
 </body>
+
+<!-- javascript link -->
+<script src="assets/javascript.js/"></script>
 </html>
