creating nav bar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 
     <!-- moments.js link -->
 
+    <!-- navbar here -->
+    <nav class="navbar navbar-dark bg-medium">
+            <a class="navbar-brand">Choo Choose Your Train!</a>
+            <form class="form-center"></form>
+          </nav>
 
     
 </body>
