--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Choo Choose Me!</title>
 </head>
@@ -23,6 +22,15 @@
             <a class="navbar-brand">Choo Choose Your Train!</a>
             <form class="form-center"></form>
           </nav>
+
+        <div class="card bg-dark text-white">
+        <img src="assets/images/choochoo.gif" class="card-img" alt="image">
+        <div class="card-img-overlay">
+          <h5 class="card-title">Train Times</h5>
+          <p class="card-text">Departing</p>
+          <p class="card-text">Arrival</p>
+        </div>
+      </div>
 
     
 </body>
