adding moment.js

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- firebase link -->
 
     <!-- moments.js link -->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
     <!-- navbar here -->
     <nav class="navbar navbar-dark bg-medium">
@@ -29,6 +30,20 @@
           <h5 class="card-title">Train Times</h5>
           <p class="card-text">Departing</p>
           <p class="card-text">Arrival</p>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                Train Name
+              </div>
+              <div class="col-sm">
+                Departing
+              </div>
+              <div class="col-sm">
+                Arriving
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
 
