--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
         </div>
       </div>
 
+      <script>
+        var randomDate = "01/01/2018";
+        var randomFormat = "MM/DD/YYYY";
+        var convertedDate = moment(randomDate, randomFormat);
+
     
 </body>
 
