--- a/index.html
+++ b/index.html
@@ -41,6 +41,30 @@
               <div class="col-sm">
                 Arriving
               </div>
+              <div class="container">
+                <div class="row">
+                  <div class="col-sm">
+                    Soul Train
+                  </div>
+                  <div class="col-sm">
+                    4:20
+                  </div>
+                  <div class="col-sm">
+                    5:00
+                  </div>
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-sm">
+                        SnakesOn ATrain
+                      </div>
+                      <div class="col-sm">
+                        6:06
+                      </div>
+                      <div class="col-sm">
+                        6:46
+                      </div>
+
+
             </div>
           </div>
 
@@ -52,7 +76,7 @@
         var randomFormat = "MM/DD/YYYY";
         var convertedDate = moment(randomDate, randomFormat);
 
-        
+
 
     
 </body>
